support_tools/swigwin-3.0.12/Examples/test-suite/errors/swig_pythoncode_bad.i
%module xxx

%pythoncode %{
    def foo():
	a = 1 # This line starts with a tab instead of 8 spaces.
        return 2
%}
